# audiobook-py

./: README.md  audiobook-py.spec  pyproject.toml
src/audiobook_py/: __init__.py  __main__.py  cli.py  control.py  reader.py  utils.py
