[project]
name = "audiobook-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Destin Ecarma", email = "109215379+DestinEcarma@users.noreply.github.com" }
]
dependencies = [
    "pyttsx3>=2.98",
    "rich>=14.0.0",
    "keyboard>=0.13.5",
    "rich-argparse>=1.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"audiobook-py" = "audiobook_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_py"]

[tool.rye.scripts]
install = { cmd = "pyinstaller --onefile -n audiobook-py ./src/audiobook_py/__main__.py" }
